List videos cofinugure without ngrx

--- a/src/app/modules/video/pages/list-video-container/list-video-container.component.html
+++ b/src/app/modules/video/pages/list-video-container/list-video-container.component.html
@@ -1,1 +1,8 @@
-<p>Liste des utilisateurs</p>
+<!-- dumb component list video -->
+<app-video-list
+  [videos]="videos"
+  [headers]="headers"
+  (video)="onSelectElement($event)"
+>
+</app-video-list>
+<!-- Dumb component paginator -->
