--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,7 @@
-<div class="card">
-  <p-menubar [model]="menus"></p-menubar>
+<div class="card justify-content-center">
+  <p-menubar [model]="menus">
+    <ng-template pTemplate="start">
+      <h4 class="mr-3">Rapport Carbone</h4>
+    </ng-template>
+  </p-menubar>
 </div>
