--- a/src/app/modules/video/pages/list-video-container/list-video-container.component.html
+++ b/src/app/modules/video/pages/list-video-container/list-video-container.component.html
@@ -2,7 +2,6 @@
 <app-video-list
   [videos]="videos"
   [headers]="headers"
-  (video)="onSelectElement($event)"
->
+  (videoAction)="onSelectElement($event)">
 </app-video-list>
 <!-- Dumb component paginator -->
