--- a/src/app/modules/video/components/video-list/video-list.component.html
+++ b/src/app/modules/video/components/video-list/video-list.component.html
@@ -1,15 +1,25 @@
 <div class="grid">
   <div class="col-2"></div>
-  <div class="col">
-    <div class="text-center">
-      <h3>{{dataConst.wording.titleListVideos}}</h3>
+  <div class="col mt-2">
+    <div class="flex">
+      <div class="flex-order-0">
+        <h3 class="m-2">{{dataConst.wording.titleListVideos}}</h3>
+      </div>
+      <div class="flex-order-1">
+        <p-button
+          class="p"
+          [label]="dataConst.wording.generateCarbon"
+          *ngIf="selectedVideos.length !== 0"
+          (click)="emitGenerateValue()">
+        </p-button>
+      </div>
     </div>
     <hr>
     <app-data-table
       [COLUMNS]="headers"
       [DATA]="videos"
       [haveActions]="false"
-      (selectRow)="selectElement($event)">
+      (selectRows)="selectElement($event)">
     </app-data-table>
   </div>
   <div class="col-2"></div>
