--- a/src/app/modules/video/pages/list-video-container/list-video-container.component.html
+++ b/src/app/modules/video/pages/list-video-container/list-video-container.component.html
@@ -2,6 +2,8 @@
 <app-video-list
   [videos]="videos"
   [headers]="headers"
-  (videoAction)="onSelectElement($event)">
+  (videoAction)="onSelectElement($event)"
+  [loading]="loading$ | async"
+>
 </app-video-list>
 <!-- Dumb component paginator -->
