--- a/src/app/modules/video/components/video-list/video-list.component.html
+++ b/src/app/modules/video/components/video-list/video-list.component.html
@@ -15,6 +15,9 @@
       </div>
     </div>
     <hr>
+    <div class="text-center" *ngIf="loading">
+      <p-progressSpinner></p-progressSpinner>
+    </div>
     <app-data-table
       [COLUMNS]="headers"
       [DATA]="videos"
