Format forms report

--- a/src/app/modules/reports/components/report-form/report-form.component.html
+++ b/src/app/modules/reports/components/report-form/report-form.component.html
@@ -9,7 +9,7 @@
     <div class="filed">
       <p-multiSelect
         [options]="videos"
-        [formControlName]="dataConst.forms.videos"
+        [formControlName]="dataConst.forms.selectedVideo"
         optionLabel="name"
         [placeholder]="dataConst.forms.selectVideoLabel"
       >
